...
            "state": "needs_review",
            "value": "Xuất khung đã đánh dấu…"
          }
        }
      }
    },
    "Export Objects": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Xuất đối tượng"
          }
...
            "state": "needs_review",
            "value": "Bản bắt mẫu"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Lưu"
          }
...
            "state": "needs_review",
            "value": "Lưu tất cả…"
          }
        }
      }
    },
    "SMB": {
      "localizations": {
        "vi": {
          "stringUnit": {
            "state": "needs_review",
            "value": "SMB"
          }
...
